--- a/styles.css
+++ b/styles.css
@@ -10,24 +10,23 @@ body {
 }
 
 .box-row {
-
-    height: 100%;
-    width: 100%;
+    
     display: flex;
     justify-content: space-around;
     flex-grow: 1;
     flex-basis: auto;
-    min-height: 10px;
+    
+    
 }
 
 .box-column {
-    
+    aspect-ratio: 1 / 1;
     
     background-color: blue;    
     flex-grow: 1;
     flex-basis: auto;
-    border: 1px dashed black;
-    min-width: 10px;
+    /**border: 1px dashed black;**/
+    
     
 }
 
