--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /**styles go here! I totally remember how to comment out css**/
 body {
-    background-color: green;
+    background-color: rgb(136, 194, 136);
 }
 
 .box-grid {
@@ -19,10 +19,10 @@ body {
 
 .box-column {
     aspect-ratio: 1 / 1;
-    background-color: blue;    
+    background-color: rgb(124, 168, 219);    
     flex-grow: 1;
     flex-basis: auto;  
-    border: 1px solid black;  
+    border: .25px solid black;  
 }
 
 .box-column:hover {
